--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = tutorial.settings
+default = taobao_s.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = tutorial
+project = taobao_s
